# xtree

./: .gitignore  .gitigore  CONTRIBUTING.md  COW_EXPLANATION.md  DESIGN.md  IMPLEMENTATION_STATUS.md  LICENSE  LOGGING.md  NOTICE  PERSISTENCE_STATUS.md  README.md  TESTING.md  build.gradle  debug_page_tracker.cpp  perf_results_after.json  settings.gradle
core/src/main/cpp/: CMakeLists.txt  MISSING_RELOAD_FUNCTIONALITY.md  PERFORMANCE_OPTIMIZATIONS.md  build.gradle  version.h.in
core/src/main/cpp/benchmarks/: CMakeLists.txt  README.md  bench_logging_overhead.cpp  concurrent_qps_benchmark.cpp  concurrent_simple.cpp  iterator_optimization_analysis.cpp  lazy_iterator_test.cpp  multi_segment_benchmark.cpp  optimized_multi_segment_benchmark.cpp  optimized_query_benchmark.cpp  overlap_analysis.cpp  parallel_simd_benchmark.cpp  performance_baseline.json  performance_regression.cpp  profile_insertion_path.cpp  qps_debug_benchmark.cpp  realistic_data_benchmark.cpp  run_benchmarks.sh  simd_perf_highdim.cpp  tree_depth_analysis.cpp  tree_performance_analysis.cpp  tree_structure_debug.cpp
core/src/main/cpp/benchmarks/persistence/: CMakeLists.txt  README.md  bench_checkpoint_coordinator_performance.cpp  bench_checkpoint_performance.cpp  bench_checksum_performance.cpp  bench_durability_policies.cpp  bench_durable_store_performance.cpp  bench_object_table_fragmentation.cpp  bench_object_table_performance.cpp  bench_recovery_performance.cpp  bench_segment_allocator_fragmentation.cpp  bench_segment_allocator_performance.cpp  bench_sharded_object_table_overhead.cpp  bench_wal_comprehensive.cpp
core/src/main/cpp/cmake/: read_properties.cmake
core/src/main/cpp/examples/: cow_integration_example.cpp  cow_simple_usage.cpp
core/src/main/cpp/src/: cache_policy.hpp  compact_xtree_allocator.cpp.old  compact_xtree_allocator.hpp.old  compact_xtree_allocator_impl.hpp  concurrent_xtree.hpp  config.h  cow_allocator.hpp  cow_xtree_factory.hpp  datarecord.hpp  float_utils.h  globals.cpp  indexdetails.cpp  indexdetails.h  indexdetails.hpp  indexdetails_typed.hpp  irecord.hpp  keymbr.cpp  keymbr.h  lru.h  lru.hpp  lru_sharded.h  lru_tracker.h  lru_tracker_stub.cpp  memmgr.cpp  memmgr.h  mmapfile.cpp  mmapfile.h  pch.h  perf_macros.h  strnatcmp.cpp  strnatcmp.h  typemgr.h  uniqueid.h  util.cpp  util.h  xtiter.h  xtiter.hpp  xtree.h  xtree.hpp  xtree_allocator_base.hpp  (+10 more)
core/src/main/cpp/src/fileio/: cow_mmap_manager.cpp  cow_mmap_manager.hpp  fast_file_io.cpp  fast_file_io.hpp  platform_file_io.cpp  platform_file_io.hpp
core/src/main/cpp/src/memmgr/: compact_allocator.hpp  compact_snapshot_manager.hpp  concurrent_compact_allocator.cpp  concurrent_compact_allocator.hpp  cow_compact_memmgr.hpp  cow_memmgr.cpp  cow_memmgr.hpp  cow_memmgr_integration.hpp  cow_memmgr_optimized.hpp  hybrid_memmgr.hpp  locality_allocator.hpp  page_write_tracker.hpp  xtree_memory_manager.hpp
core/src/main/cpp/src/persistence/: ABA_PROTECTION_DESIGN.md  BUCKET_REALLOCATION_STRATEGY.md  COMPACTION_STRATEGY.md  CONFIGURATION_EXAMPLES.md  COW_MVCC_Persistence_Design_OLD.md  DURABILITY_CONTRACT_CHECKLIST.md  DURABILITY_POLICIES.md  IMPLEMENTATION_PLAN.md  LAZY_INDEX_LOADING_IMPLEMENTATION.md  METRICS_GUIDE.md  PERSISTENCE_DESIGN.md  PERSISTENCE_STATUS.md  SEGMENT_ALLOCATOR_REDESIGN.md  SHARDED_SUBSTRATE_DESIGN.md  STORAGE_ARCHITECTURE.md  TUNING_GUIDE.md  XTREE_INTEGRATION_DESIGN.md  checkpoint_coordinator.cpp  checkpoint_coordinator.h  checksums.cpp  checksums.h  compactor.cpp  compactor.h  config.h  durability_policy.h  durable_runtime.cpp  durable_runtime.h  durable_store.cpp  durable_store.h  file_handle_registry.cpp  file_handle_registry.h  hotset.cpp  hotset.h  index_registry.cpp  index_registry.h  manifest.cpp  manifest.h  mapping_manager.cpp  mapping_manager.h  memory_coordinator.cpp  (+34 more)
core/src/main/cpp/src/util/: cpu_features.cpp  cpu_features.h  endian.hpp  log.cpp  log.h  log_control.h  log_runtime.h  logmanager.h  memmapper.h  simd_implementations.cpp  strnatcmp.h  util.h
core/src/main/cpp/test/: README.md  README_MMAP_TESTS.md  debug_page_addresses.cpp  test_batch_mmap_optimization.cpp  test_cache_policy.cpp  test_cache_policy_stress.cpp  test_components.cpp  test_concurrent_point_search.cpp  test_cow_integration.cpp  test_cow_memory.cpp  test_datarecord_serialization.cpp  test_debug_float.cpp  test_float_utils.cpp  test_globals.cpp  test_hot_node_detector.cpp  test_index_registry.cpp  test_integration.cpp  test_keymbr.cpp  test_lru_sharded.cpp  test_lru_sharded_stress.cpp  test_lru_tracker.cpp  test_lru_unit.cpp  test_memory_coordinator.cpp  test_mmap_xtree_integration.cpp  test_mmapfile.cpp  test_page_cache.cpp  test_page_write_tracker.cpp  test_performance.cpp  test_persistence_integration.cpp  test_search.cpp  test_store_integration.cpp  test_symbols.cpp  test_wire_format.cpp  test_xtree.cpp  test_xtree_commit_first.cpp  test_xtree_concurrent_search.cpp  test_xtree_durability.cpp  test_xtree_durability_stress.cpp  test_xtree_durability_unit.cpp  test_xtree_point_search.cpp  (+4 more)
core/src/main/cpp/test/integration/: test_10k_issue.cpp  test_compact_cow_integration.cpp  test_compact_root_persistence.cpp  test_cow_integration.cpp  test_integration.cpp  test_large_scale_segmented.cpp  test_mmap_comprehensive.cpp  test_mmap_full_reload.cpp  test_root_tracking.cpp  test_snapshot_size_comparison.cpp  test_xtree_allocator_integration.cpp
core/src/main/cpp/test/memmgr/: test_auto_snapshot.cpp  test_compact_allocator.cpp  test_concurrent_multi_segment.cpp  test_concurrent_operations.cpp  test_cow_backend_comparison.cpp  test_cow_memory.cpp  test_multi_segment_load.cpp  test_multi_segment_load_verify.cpp  test_multi_segment_snapshot.cpp  test_page_write_tracker.cpp  test_production_ready_snapshot.cpp  test_segmented_allocator.cpp
core/src/main/cpp/test/persistence/: test_bitmap_allocator.cpp  test_bucket_reallocation.cpp  test_cascade_realloc.cpp  test_checkpoint_coordinator.cpp  test_checksums.cpp  test_config.cpp  test_crash_consistency.cpp  test_crash_consistency_simple.cpp  test_crash_resilience.cpp  test_durable_store.cpp  (+26 more)
(+10 files in other folders)
